--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   cupertino_icons: ^1.0.6
   firebase_core: ^3.8.0
   firebase_messaging: ^15.1.5
+  firebase_auth:
+  firebase_database:
+  cloud_firestore:
 
 dev_dependencies:
   flutter_test:
